workon responsiveness and finish containers

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>"OUR" Blog</title>
 </head>
 <body>
-    <header><h1>"OUR" Blog</h1></header>
+    <header><h1>"OUR" Blog</h1><h3>by APAMPA MUIZAH</h3></header>
     <div class="intro">
     <div class="images1">
-        <img src="./assets/GST 204 - IMG 2.jpg" alt="">
+        <img src="./assets/GST 204 - IMG 2.jpg" alt="" height="200px">
         <img src="./assets/GST 204 IMG 4.jpg" alt="">
     </div>
     <div class="paras1">
